aws-terraform-simple-backend/sg.tf
resource "aws_security_group" "instance-sg" {
  name        = "${var.cluster_name}-sg"
  description = "simple instance sg"

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }


  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]

    ipv6_cidr_blocks = ["::/0"]

  }

  tags = {

    Name = var.cluster_name

  }
}

resource "aws_security_group" "sg-alb" {
  name        = "${var.cluster_name}-alb-sg"
  description = "Load balance SG"

  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
